@@ -26,7 +26,7 @@
     },
     {
       "name": "simp/simplib",
-      "version_requirement": ">= 3.9.0 < 4.0.0"
+      "version_requirement": ">= 3.9.0 < 5.0.0"
     },
     {
       "name": "puppetlabs/stdlib",
@@ -37,13 +37,15 @@
     {
       "operatingsystem": "CentOS",
       "operatingsystemrelease": [
-        "7"
+        "7",
+        "8"
       ]
     },
     {
       "operatingsystem": "RedHat",
       "operatingsystemrelease": [
-        "7"
+        "7",
+        "8"
       ]
     }
   ],
